--- a/conf/machine/raspberrypi3.conf
+++ b/conf/machine/raspberrypi3.conf
@@ -13,3 +13,7 @@ KERNEL_DEFCONFIG ?= "bcm2709_defconfig"
 UBOOT_MACHINE ?= "rpi_2_config"
 SERIAL_CONSOLE ?= "115200 ttyS0"
 VC4_CMA_SIZE ?= "cma-256"
+
+VIDEO_CAMERA ?= "1"
+ENABLE_SPI_BUS ?= "1"
+ENABLE_I2C ?= "1"
